--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+		<script src='lib/three.js'></script>
   </head>
   <body>
     <p id="px">camera position</p>
 
     <canvas id="bg"></canvas>
-    <script type="module" src="/main.js"></script>
+    <script  src="/main.js"></script>
   </body>
 </html>
